2008-05-16  Alexander V. Lukyanov <lav@yars.free.net>

	* ftpclass.cc, ftpclass.h: outline some funcs; disable ALLO on 202 reply;
	  add support for two-arg SITE UTIME; add support for MFMT; new setting
	  ftp:use-site-utime2.

2008-05-14  Alexander V. Lukyanov <lav@yars.free.net>

	* ftpclass.cc, ftpclass.h: add ALLO check and set use-allo if unsupported.

2008-05-08  Alexander V. Lukyanov <lav@yars.free.net>

	* SFtp.cc: fixed handling of missed strings in Status reply.

2008-05-06  Alexander V. Lukyanov <lav@yars.free.net>

	* Http.cc: (MergeCookie) use xstring methods; fixed NULL dereference.
	* xstring.cc, xstring.h: xstring::skip_all new method.

2008-04-24  Alexander V. Lukyanov <lav@yars.free.net>

	* ftpclass.cc: fixed cwd tracking for ftps; fixed rate_limit allocation
	  for HTTP proxy; don't re-create data_iobuf when receiving data over
	  HTTP proxy, because we could lose some already received data (reported
	  by Arkady Sherman <Arkady.Sherman@ksu.ru>).

2008-04-08  Alexander V. Lukyanov <lav@yars.free.net>

	* GetFileInfo.cc: init size/time fields.
	* SFtp.cc: more debug messages; fill array_info even in case of error.
	* buffer.cc, resource.cc: don't use empty charset name.

2008-03-14  Alexander V. Lukyanov <lav@yars.free.net>

	* resource.cc: make sftp:use-full-path on by default; validate it
	  properly as a boolean.

2008-03-13  Alexander V. Lukyanov <lav@yars.free.net>

	* FileSet.cc: use time 12:00:00 when time is unknown (instead of 12:00:30).

2008-03-05  Alexander V. Lukyanov <lav@yars.free.net>

	* Fish.cc: handle stderr messages during file transfer.
	* Http.cc: add 303 and 307 codes (suggested by Stephane Chazelas <Stephane_Chazelas@yahoo.fr>).

2008-02-26  Alexander V. Lukyanov <lav@yars.free.net>

	* SSH_Access.cc, SSH_Access.h, Fish.cc, Fish.h, SFtp.cc, SFtp.h, Makefile.am:
	  split off the ssh interaction logic to separate module (SSH_Access).
	* MirrorJob.cc: add basename only if it is not already there.
